@@ -713,6 +713,8 @@ JSValue* StringProtoFunc::callAsFunction(ExecState* exec, JSObject* thisObj, con
     break;
   }
   case LocaleCompare:
+    if (args.size() < 1)
+      return jsNumber(0);
     return jsNumber(localeCompare(s, a0->toString(exec)));
 #ifndef KJS_PURE_ECMA
   case Big:
